Basic front for POST request created

--- a/variables.sass
+++ b/variables.sass
@@ -1,1 +1,37 @@
-$clr-base: #668663
+$clr-white: #FFFFFF
+
+$clr-light-grey: #D9D9D9
+$clr-grey: #B4B4B4
+$clr-dark-grey: #8B8B8B
+
+$clr-beige: #F3DBC7
+$clr-dark-beige: #DCB18B
+
+$clr-light-green: #C1FFC8
+$clr-base-green: #668663
+$clr-green: #567354
+$clr-dark-green: #435F40
+
+$clr-email: #484848
+
+$clr-light-blue: #D2EFFF
+$clr-light-yellow: #FFEAC1
+$clr-light-red: #FFC1C1
+
+$fs-50: 50px
+$fs-32: 32px
+$fs-24: 24px
+$fs-22: 22px
+$fs-20: 20px
+$fs-19: 19px
+$fs-18: 18px
+$fs-17: 17px
+$fs-16: 16px
+$fs-15: 15px
+$fs-14: 14px
+$fs-12: 12px
+$fs-11: 11px
+$fs-10: 10px
+
+$br-card: 28px
+
