--- a/src/client/main/components/uui/Card/GiraffeCard/GiraffeCard.module.sass
+++ b/src/client/main/components/uui/Card/GiraffeCard/GiraffeCard.module.sass
@@ -4,3 +4,41 @@
     border-radius: $br-card
     background-color: $clr-beige
     padding: 0 24px
+
+.name
+    display: flex
+    justify-content: center
+    color: $clr-dark-green
+    font-weight: bold
+    font-size: $fs-22
+    line-height: 26px
+
+.paramContainer
+    display: flex
+    justify-content: space-between
+    color: $clr-dark
+    background-color: $clr-dark-beige
+    text-transform: uppercase
+    font-weight: bold
+    font-size: $fs-16
+    line-height: 19px
+    border-radius: 58px
+    padding: 10px 25px
+
+.charContainer
+    padding-top: 22px
+    padding-bottom: 18px
+
+.param
+    display: flex
+    color: $clr-dark-green
+    font-size: $fs-15
+    font-weight: bold
+    line-height: 18px
+    padding-bottom: 19px
+
+    p
+        padding-left: 3px
+        font-weight: normal
+        color: $clr-dark
+        text-transform: capitalize
