--- a/src/client/main/components/uui/NavBar/CompanyInfo/CompanyInfo.module.sass
+++ b/src/client/main/components/uui/NavBar/CompanyInfo/CompanyInfo.module.sass
@@ -4,16 +4,22 @@
     margin-top: 28px
     margin-bottom: 55px
     display: flex
-    align-content: flex-start
 
 .title
     color: $clr-white
     font-size: $fs-10
     font-weight: bold
     line-height: 12px
+    margin-bottom: 6px
 
 .subtitle
     color: $clr-white
     font-size: $fs-10
     font-weight: 300
     line-height: 12px
+
+.info
+    display: flex
+    flex-direction: column
+    justify-content: center
+    margin-left: 9px
