--- a/src/client/main/components/uui/NavBar/NavBar.module.sass
+++ b/src/client/main/components/uui/NavBar/NavBar.module.sass
@@ -1,3 +1,48 @@
+@import 'variables'
+    
 .navWrapper
     margin-left: 32px
     margin-right: 25px
+
+.menuItemsWrapper
+    margin-bottom: 30px
+
+.menuItemContainer
+    display: flex
+    background-color: $clr-green
+    color: $clr-white
+    border-radius: 52px
+    padding: 12px 16px
+    margin-bottom: 30px
+    min-width: 230px
+    min-height: 51px
+
+    p
+        align-self: center
+        margin-left : 25px
+        font-weight: 300
+        font-size: $fs-17
+        line-height: 20px
+
+    div
+        align-self: center
+
+.selected
+    display: flex
+    color: $clr-green
+    background-color: $clr-white
+    border-radius: 52px
+    padding: 12px 16px
+    margin-bottom: 30px
+    min-width: 230px
+    min-height: 51px
+
+    p
+        align-self: center
+        margin-left : 25px
+        font-weight: 500
+        font-size: $fs-19
+        line-height: 22px
+
+    div
+        align-self: center
