--- a/src/client/main/components/pages/Giraffes/Giraffes.module.sass
+++ b/src/client/main/components/pages/Giraffes/Giraffes.module.sass
@@ -1,5 +1,8 @@
 @import 'variables'
 
+li
+    list-style: none
+
 .mainWrapper
     background-color: $clr-white
     color: $clr-green
@@ -8,9 +11,12 @@
     padding-left: 51px
     padding-right: 40px
     border-radius: 25px
+    width: 83%
 
 .addGiraffeContainer
     display: flex
+    margin-top: 35px
+    margin-bottom: 26px
  
     .title
         color: $clr-green
@@ -29,3 +35,6 @@
 .addBtn
     background-color: $clr-white
     cursor: pointers
+
+.giraffeCardWrapper
+    margin-right: 33px
