--- a/src/client/main/components/uui/Card/GiraffeCard/GiraffeCard.module.sass
+++ b/src/client/main/components/uui/Card/GiraffeCard/GiraffeCard.module.sass
@@ -24,6 +24,7 @@
     line-height: 19px
     border-radius: 58px
     padding: 10px 25px
+    min-width: 189px
 
 .charContainer
     padding-top: 22px
@@ -42,3 +43,21 @@
         font-weight: normal
         color: $clr-dark
         text-transform: capitalize
+
+.manageMenu
+    display: flex
+    justify-content: flex-end
+    padding-top: 14px
+
+.imgWrapper
+    padding-top: 5px
+    padding-bottom: 27px
+    text-align: center
+
+.paramImages
+    padding-top: 24px
+    padding-bottom: 12px
+    text-align: center
+
+.manageMenuBtn
+    background-color: transparent
