--- a/variables.sass
+++ b/variables.sass
@@ -13,7 +13,7 @@ $clr-base-green: #668663
 $clr-green: #567354
 $clr-dark-green: #435F40
 
-$clr-email: #484848
+$clr-header: #484848
 
 $clr-light-blue: #D2EFFF
 $clr-light-yellow: #FFEAC1
