--- a/src/client/main/components/uui/Card/ManageCard/ManageCard.module.sass
+++ b/src/client/main/components/uui/Card/ManageCard/ManageCard.module.sass
@@ -1,6 +1,9 @@
 @import 'variables'
 
 .container
+    position: relative //or relative
+    // left: 188px
+    // bottom: 460px
     background-color: $clr-base-green
     color: $clr-white
     border-radius: 20px
@@ -19,6 +22,7 @@
 
     &:hover
         background-color: $clr-green
+        cursor: pointer
 
 .itemText
     color: $clr-white
