--- a/variables.sass
+++ b/variables.sass
@@ -19,6 +19,8 @@ $clr-light-blue: #D2EFFF
 $clr-light-yellow: #FFEAC1
 $clr-light-red: #FFC1C1
 
+$clr-shadow: #869CB0
+
 $fs-50: 50px
 $fs-32: 32px
 $fs-24: 24px
