Created correct form to display edit item

--- a/src/client/main/components/uui/Card/GiraffeCard/GiraffeCard.module.sass
+++ b/src/client/main/components/uui/Card/GiraffeCard/GiraffeCard.module.sass
@@ -28,6 +28,7 @@ input
     font-size: $fs-22
     line-height: 26px
     text-align: center
+    max-width: 200px
 
 .paramContainer
     display: flex
@@ -93,3 +94,4 @@ input
     font-weight: 500
     text-align: center
     max-width: 129px
+    cursor: pointer
