--- a/src/client/main/components/uui/Card/GiraffeCard/GiraffeCard.module.sass
+++ b/src/client/main/components/uui/Card/GiraffeCard/GiraffeCard.module.sass
@@ -4,6 +4,12 @@ input
     background-color: transparent
     max-width: 100px
 
+    &:focus
+        outline: none
+
+input::-webkit-input-placeholder
+    color: $clr-dark
+
 .short
     max-width: 30px
     text-transform: uppercase
@@ -68,6 +74,7 @@ input
     display: flex
     justify-content: flex-end
     padding-top: 14px
+    max-height: 29px
 
 .imgWrapper
     padding-top: 5px
@@ -83,6 +90,9 @@ input
     background-color: transparent
     cursor: pointer
 
+    &:focus
+        outline: none
+
 .saveBtn
     align-self: center
     background-color: $clr-green
@@ -95,3 +105,21 @@ input
     text-align: center
     max-width: 129px
     cursor: pointer
+
+    &:focus
+        outline: none
+
+.saveBtnDisable
+    align-self: center
+    background-color: $clr-grey
+    color: $clr-white
+    border-radius: 33px
+    padding: 10px 24px
+    line-height: 19px
+    font-size: $fs-16
+    font-weight: 500
+    text-align: center
+    max-width: 129px
+
+    &:focus
+        outline: none
