Correct PUT request

--- a/src/client/main/components/pages/Giraffes/Giraffes.module.sass
+++ b/src/client/main/components/pages/Giraffes/Giraffes.module.sass
@@ -33,8 +33,12 @@ li
     flex-direction: column
 
 .addBtn
-    background-color: $clr-white
-    cursor: pointers
+    background-color: transparent
+    cursor: pointer
+
+    &:focus
+        outline: none
+
 
 .giraffeCardWrapper
     margin-right: 33px
