--- a/src/client/main/components/uui/Card/Fullness/Fullness.module.sass
+++ b/src/client/main/components/uui/Card/Fullness/Fullness.module.sass
@@ -50,15 +50,16 @@
     content: ''
     background-color: $clr-dark-green
     border-radius: 35px
-    // height: 100%
     width: 70%
+    display: flex
 
 .bar
-    content: ''
     background-color: $clr-beige
     border-radius: 35px
-    height: 10px
-    width: 80px
+    height: 77%
+    width: 75%
+    align-self: center
+    margin: 5px
 
 .infoBackground
     background-color: $clr-dark-green
