--- a/src/client/main/components/pages/Giraffes/Giraffes.module.sass
+++ b/src/client/main/components/pages/Giraffes/Giraffes.module.sass
@@ -11,6 +11,7 @@ li
     padding-left: 51px
     border-radius: 25px
     width: 83%
+    padding-bottom: 40px
 
 .addGiraffeContainer
     display: flex
