--- a/src/client/main/components/style.module.sass
+++ b/src/client/main/components/style.module.sass
@@ -1,12 +1,14 @@
 @import 'variables'
 
+body::-webkit-scrollbar 
+    width: 0
+
 *, ::after, ::before
     margin: 0
     padding: 0
     border: 0
 
 .mainContainer
-    height: 100vh
     display: flex
     justify-content: space-between
     background-color: $clr-base-green
