--- a/src/client/main/components/uui/Card/Fullness/Fullness.module.sass
+++ b/src/client/main/components/uui/Card/Fullness/Fullness.module.sass
@@ -12,6 +12,7 @@
     padding-bottom: 50px
     min-width: 500px
     margin-right: 40px
+    max-height: 200px
 
 .close
     background-color: transparent
