--- a/src/client/main/components/uui/Card/Updates/Updates.module.sass
+++ b/src/client/main/components/uui/Card/Updates/Updates.module.sass
@@ -81,7 +81,10 @@
     background-color: $clr-light-blue
 
 .realized
-    background-color: $clr-light-yellow
+    background-color: $clr-light-green
 
 .denied
     background-color: $clr-light-red    
+
+.notCommit
+    background-color: $clr-light-yellow
