--- a/src/client/main/components/uui/Card/GiraffeCard/GiraffeCard.module.sass
+++ b/src/client/main/components/uui/Card/GiraffeCard/GiraffeCard.module.sass
@@ -123,3 +123,8 @@ input::-webkit-input-placeholder
 
     &:focus
         outline: none
+
+.image
+    height: 145px
+    width: 145px
+    border-radius: 50%
