Fixed Update table

--- a/src/client/main/components/uui/Card/ManageCard/ManageCard.module.sass
+++ b/src/client/main/components/uui/Card/ManageCard/ManageCard.module.sass
@@ -12,6 +12,9 @@
     padding-left: 10px
     min-height: 94px
 
+    .manageMenuItem
+        margin-right: 0
+
 .item 
     background-color: $clr-base-green
     display: flex
