--- a/src/client/main/components/uui/Card/Updates/Updates.module.sass
+++ b/src/client/main/components/uui/Card/Updates/Updates.module.sass
@@ -6,6 +6,8 @@
     border-radius: 28px
     padding-left: 32px
     padding-right: 33px
+    min-width: 520px
+    margin-bottom: 40px
 
 .headerWrapper
     display: flex
@@ -59,14 +61,16 @@
     font-size: $fs-12
     line-height: 14px
     color: $clr-grey
+    width: 25%
 
 .bodyItem
     color: $clr-dark-green
     font-size: $fs-12
     line-height: 14px
-    margin-right: 30px
+    margin-right: 0
     margin-top: 12px
     margin-bottom: 13px
+    width: 25%
 
     &:last-child
         margin-right: 0
